k8s/exam-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exam-app
  labels:
    app: exam-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exam-app
  template:
    metadata:
      labels:
        app: exam-app
    spec:
      containers:
        - name: exam-app 
          image: habbang8838/exam-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
