k8s/exam-front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exam-front
  labels:
    app: exam-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exam-front
  template:
    metadata:
      labels:
        app: exam-front
    spec:
      containers:
        - name: exam-front
          image: habbang8838/exam-front:latest
          ports:
            - containerPort: 3000
