k8s/exam-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exam-app-service
spec:
  selector:
    app: exam-app   # app-deployment.yaml 의 metadata.labels.app 과 같아야 함
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP  # 내부 통신용 (Ingress가 이 Service를 바라보도록)
